syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/aryyawijaya/simple-bank/pb";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string sessionId = 1;
    string accessToken = 2;
    google.protobuf.Timestamp accessTokenExpiresAt = 3;
	string refreshToken = 4;
	google.protobuf.Timestamp refreshTokenExpiresAt = 5;
	User user = 6;
}
