syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/aryyawijaya/simple-bank/pb";

message User {
    string username = 1;
    string hashedPassword = 2;
    string fullName = 3;
    string email = 4;
    google.protobuf.Timestamp passwordChangedAt = 5;
    google.protobuf.Timestamp createdAt = 6;
}
